# AutoDiff

./: LICENSE  README.md  coverage.xml  hack_solution.py  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: documentation.ipynb
src/: f.py
src/team48_autodiff_package.egg-info/: PKG-INFO  SOURCES.txt
src/team48_autodiff_package/autoDiff/forward/: AutoDiff.py  forward.py  single_var_forward.py
src/team48_autodiff_package/autoDiff/reverse/: grad_ops.py  reverse.py  reverse_mode_helpers.py
src/team48_autodiff_package/dualNumber/: dual_numbers.py
src/team48_autodiff_package/nodeGraph/: node.py  node_operations.py
src/team48_autodiff_package_final_project.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_ad.py  test_dual.py  test_forward_ad.py  test_reverse_ad.py  testerMeep.py
