[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "team48_autodiff_package"
version = "0.1.2"
authors = [
  { name="Sam DePaolo", email="sdepaolo@college.harvard.edu" },
 { name="Nick Dow", email="dow@college.harvard.edu"},
 { name="Alex Fung", email="alexfung@college.harvard.edu" },
]
description = "CS07 AD forward and reverse AD package"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/team48_autodiff_package"
"Bug Tracker" = "https://github.com/pypa/team48_autodiff_package/issues"