[metadata]
name = team48_autodiff_package
description = a forward and reverse automatic differentation package
author = Nick Dow, Sam Dep, Alex Fun
license = MIT
license_file = LICENSE
version = 0.1.2
platforms = unix, linux, osx, win32
classifiers = 
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
python_requires =>3.6
package_dir =
    =src
packages = 
    find:

[options.packages.find]
where = src